# rubik_cube.py

./: .gitignore  Jupyter-调试.ipynb  LICENSE  README.md  RubikObj.py  data.py  demo-jupyter.ipynb  pyproject.toml  requirements.txt  rubik.py  tools.py  操控魔方.ipynb  识别魔方.ipynb
demo/: demo-jupyter.ipynb  demo.py  quick_start.py  tostate.py  比利比利.ipynb
rubik/: __init__.py  data.py  group.py  scale_match.py  tools.py  video.py
src/: README.md  data.py  demo.py  group.py  rubik.py  scale_match.py  tools.py
tests/: test_validstate.py
